# ai-lib-python

./: .gitignore  AI_LIB_PYTHON_PROPOSAL.md  CHANGELOG.md  CODE_REVIEW_REPORT_V0.5.0.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  PYPI_TOKEN_SEARCH_REPORT.md  PYPI_UPLOAD_STATUS.md  README.md  README_CN.md  RELEASE_COMPLETE_REPORT.md  RELEASE_INSTRUCTIONS_V0.5.0.md  RELEASE_NOTES_V0.5.0.md  RELEASE_NOTES_v0.7.4.md  RELEASE_NOTES_v0.7.5.md  ROUTING_MANAGER_REFACTORING_ASSESSMENT.md  TYPE_CHECKING_GUIDE.md  ai-lib-rust-v0.6.5.patch  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  pt073-python-e-only.yml
benchmarks/: README.md  __init__.py  bench_pipeline.py  bench_resilience.py  benchmark_config.json
docs/: guardrails.md  guide.md  index.md
docs/api/: client.md  guardrails.md  types.md
examples/: basic_chat.py  concurrent_production.py  guardrails_production.py  multi_provider_production.py  multimodal.py  providers.py  resilience.py  streaming.py  tool_calling.py
src/ai_lib_python/: __init__.py  _features.py
src/ai_lib_python/batch/: __init__.py  collector.py  executor.py
src/ai_lib_python/cache/: __init__.py  backends.py  key.py  manager.py
src/ai_lib_python/client/: __init__.py  builder.py  cancel.py  core.py  response.py
src/ai_lib_python/computer_use/: __init__.py
src/ai_lib_python/drivers/: __init__.py  anthropic.py  gemini.py  openai.py
src/ai_lib_python/embeddings/: __init__.py  client.py  types.py  vectors.py
src/ai_lib_python/errors/: __init__.py  base.py  classification.py  standard_codes.py
src/ai_lib_python/guardrails/: __init__.py  base.py  filters.py  validators.py
src/ai_lib_python/mcp/: __init__.py
src/ai_lib_python/multimodal/: __init__.py
src/ai_lib_python/pipeline/: __init__.py  accumulate.py  base.py  decode.py  event_map.py  fan_out.py  select.py
src/ai_lib_python/plugins/: __init__.py  base.py  hooks.py  middleware.py  registry.py
src/ai_lib_python/protocol/: __init__.py  loader.py  manifest.py  validator.py
src/ai_lib_python/protocol/v2/: __init__.py  capabilities.py  manifest.py
src/ai_lib_python/registry/: __init__.py
src/ai_lib_python/rerank/: __init__.py  client.py
src/ai_lib_python/resilience/: __init__.py  backpressure.py  circuit_breaker.py  executor.py  fallback.py  preflight.py  rate_limiter.py  retry.py  signals.py
src/ai_lib_python/routing/: __init__.py  manager.py  strategy.py  types.py
src/ai_lib_python/structured/: __init__.py  json_mode.py  schema.py  validator.py
src/ai_lib_python/stt/: __init__.py  client.py
src/ai_lib_python/telemetry/: __init__.py  feedback.py  health.py  logger.py  metrics.py  tracer.py
src/ai_lib_python/telemetry/exporters/: __init__.py  prometheus.py
src/ai_lib_python/tokens/: __init__.py  counter.py  estimator.py
src/ai_lib_python/transport/: __init__.py  auth.py  http.py  pool.py
src/ai_lib_python/tts/: __init__.py  client.py
src/ai_lib_python/types/: __init__.py  events.py  message.py  tool.py
src/ai_lib_python/utils/: __init__.py  tool_call_assembler.py
tests/: __init__.py  conftest.py
tests/architecture/: test_execution_layer_import_boundary.py
tests/compliance/: __init__.py  conftest.py  test_compliance.py
tests/integration/: __init__.py  conftest.py  test_chat.py  test_concurrency.py  test_generative_manifest_consumption.py  test_mcp_bridge_e2e.py  test_mock_chat_e2e.py  test_protocol.py  test_resilience.py  test_tools.py  test_v2_compliance.py
tests/unit/: __init__.py  test_batch.py  test_cache.py  test_cancel.py  test_client.py  test_computer_use.py  test_drivers.py  test_embeddings.py  test_errors.py  test_fan_out.py  test_feedback.py  test_generative.py  test_mcp.py  test_multimodal.py  test_pipeline.py  test_plugins.py  test_pool.py  test_protocol.py  test_protocol_validation.py  test_registry.py  test_resilience.py  test_routing.py  test_signals_preflight.py  test_structured.py  test_telemetry.py  test_tokens.py  test_tool_assembler.py  test_transport.py  test_types.py  test_v2_protocol.py
