[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-lib-python"
version = "0.4.0"
description = "Official Python Runtime for AI-Protocol - The canonical Pythonic implementation for unified AI model interaction"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
    { name = "AI-Protocol Team" }
]
keywords = ["ai", "llm", "openai", "anthropic", "claude", "gpt", "streaming", "protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastjsonschema>=2.19",
    "jsonpath-ng>=1.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
tokenizer = [
    "tiktoken>=0.5",
]
full = [
    "watchdog>=3.0",
    "keyring>=24.0",
    "ai-lib-python[telemetry,tokenizer]",
]
jupyter = [
    "ipywidgets>=8.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-httpx>=0.30",
    "mypy>=1.8",
    "ruff>=0.2",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/hiddenpath/ai-lib-python"
Documentation = "https://github.com/hiddenpath/ai-lib-python#readme"
Repository = "https://github.com/hiddenpath/ai-lib-python"
Issues = "https://github.com/hiddenpath/ai-lib-python/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_lib_python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "jsonpath_ng.*",
    "fastjsonschema.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B027",   # empty method in abstract class (used for optional hooks)
    "B905",   # zip without explicit strict
    "SIM105", # contextlib.suppress doesn't work with yield
    "ARG001", # unused function argument (reserved for future)
    "ARG003", # unused class method argument (reserved for future)
]

[tool.ruff.lint.isort]
known-first-party = ["ai_lib_python"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["src/ai_lib_python"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
